crates/reinhardt-core/crates/macros/tests/ui/get_with_inject.stderr
error: Type must be Injected<T> or OptionalInjected<T> when using #[inject]
 --> tests/ui/routes/fail/get_with_inject.rs:7:33
  |
7 | async fn get_user(#[inject] db: Arc<DatabaseConnection>) -> Result<(), ()> {
  |                                 ^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::sync::Arc`
 --> tests/ui/routes/fail/get_with_inject.rs:2:5
  |
2 | use std::sync::Arc;
  |     ^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
